@@ -1021,6 +1021,15 @@ SC_CRYSTALIZE	450
 SC_VENOMIMPRESS	452
 SC_HALLUCINATIONWALK	453
 //SC_HALLUCINATIONWALK_POSTDELAY	454	// Shoulden't be removed.
+SC_READING_SB_1	455
+SC_READING_SB_2	456
+SC_READING_SB_3	457
+SC_READING_SB_4	458
+SC_READING_SB_5	459
+SC_READING_SB_6	460
+SC_READING_SB_7	461
+SC_REFLECTDAMAGE	462
+SC_FORCEOFVANGUARD	463
 
 e_gasp	0
 e_what	1
